# CS264-Labs

./: README.md  output.txt  tmux_env.sh
Lab1/: CMakeLists.txt  revInt  revInt.cpp  todo.md
Lab1/src/: GCD.cpp  palNum.cpp  powFun.cpp  powTwo.cpp  revInt.cpp
